fixed unnecessary spaces

--- a/bookmark-landing-page-master/bookmark.html
+++ b/bookmark-landing-page-master/bookmark.html
@@ -32,13 +32,31 @@
                     A simple bookmark<br> manager
                 </p>
                 <p class="hero-text">A clean and simple interface to <span class="break">organize</span>
-                    your favourite websites. Open a <span class="break">new</span> browser tab and see your sites
-                   <span class="break">load</span> instantly. Try it for free.
+                    your favourite<br> websites. Open a <span class="break">new</span> browser tab and see your sites
+                   <span class="break">load</span><br> instantly. Try it for free.
                 </p>
+                <div class="hero-buttons">
+                    <button class="chrome">Get it on the chrome</button>
+                    <button class="fox">Get it on firefox</button>
+                </div>
             </div>
 
-            <div class="hero-image">
+            <div class="colour-div">
                 <img src="bookmark images/illustration-hero.svg" alt="hero image">
+            </div>
+
+        </div>
+
+        <div class="features">
+            <p class="title">Features</p>
+            <p>Our aim is to make it quick and easy for you
+                to acess your favourite websites. Your
+                bookmarks sync between your devices so 
+                you can access them on the go
+            </p>
+            <div>
+                <hr>
+                <p>Simple Bookmarking</p><hr>
             </div>
         </div>
     </section>
